styles/EventPage.scss
.reset {
  padding: 0;
}

.eventBanner {
  padding-top: 100px;
  .image {
    img {
      height: auto;
      width: 100%;
    }
  }
  .eventDetail {
    margin-top: 80px;
    .eventTitle {
      text-align: center;
      margin-bottom: 15px;
    }
    .hostImages {
      box-sizing: border-box;
      height: 60vh;
      padding: 0;
      .imagesSlider {
        height: 300px;
        width: 300px;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
      }
    }
    .eventInfo {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
    }
    .eventMap {
      width: 400px;
      height: 300px;
      margin: auto 0;
    }
  }
}

.menuContainer {
  margin-top: 50px;
  text-align: center;
}

.reviewContainer {
  margin-top: 100px;
  .reviewInputWrap {
    margin-top: 50px;
    .rating {
      border-bottom-left-radius: 0;
      border-top-left-radius: 0;
      -webkit-appearance: none;
    }
  }
  ul {
    list-style-type: none;
    margin: 0;
  }
}

